--- a/HW/HW_3/sweep.yaml
+++ b/HW/HW_3/sweep.yaml
@@ -5,7 +5,16 @@ metric:
   name: dev_accuracy
   goal: maximize
 parameters:
+  seq_model_name:
+    values: [ "LSTM", "RNN", "GRU" ]
+  model_args.dropout:
+    min: 0.1
+    max: 0.5
+  model_args.seq_args.dropout:
+    min: 0.1
+    max: 0.5
   learning_rate:
+    distribution: log_uniform
     min: 0.00001
     max: 0.1
   accumulation_steps:
@@ -14,10 +23,10 @@ parameters:
     values: [32, 64, 128, 256, 512]
   num_layers:
     values: [1, 2, 3, 4, 5]
-  model_args.bidirectional:
+  model_args.seq_args.bidirectional:
     values: [true, false]
-  seq_model_name:
-    values: ["LSTM", "RNN", "GRU"]
+
+
 
 
 # Version 3.0
