--- a/HW/HW_3/sweep.yaml
+++ b/HW/HW_3/sweep.yaml
@@ -5,18 +5,16 @@ metric:
   name: dev_accuracy
   goal: maximize
 parameters:
-  seq_model_name:
-    values: [ "LSTM", "RNN", "GRU" ]
-  model_args.dropout:
-    min: 0.1
-    max: 0.5
-  model_args.seq_args.dropout:
-    min: 0.1
-    max: 0.5
+#  seq_model_name:
+#    values: [ "LSTM", "RNN", "GRU" ]
+#  model_args.dropout:
+#    min: 0.1
+#    max: 0.5
+#  model_args.seq_args.dropout:
+#    min: 0.1
+#    max: 0.5
   learning_rate:
-    distribution: log_uniform
-    min: -5
-    max: -1
+    values: [0.1, 0.01, 0.001, 0.0001, 0.00001]
   accumulation_steps:
     values: [1, 2, 4, 8, 16]
   hidden_size:
@@ -25,8 +23,7 @@ parameters:
     values: [1, 2, 3, 4, 5]
   model_args.seq_args.bidirectional:
     values: [true, false]
+  model_args.data_args.minimum_vocab_freq_threshold:
+    values: [0, 1, 2]
 
-
-
-
-# Version 3.0
+# https://docs.wandb.ai/guides/sweeps/configuration#parameters
