--- a/HW/HW_3/sweep.yaml
+++ b/HW/HW_3/sweep.yaml
@@ -5,14 +5,14 @@ metric:
   name: dev_accuracy
   goal: maximize
 parameters:
-#  seq_model_name:
-#    values: [ "LSTM", "RNN", "GRU" ]
-#  model_args.dropout:
-#    min: 0.1
-#    max: 0.5
-#  model_args.seq_args.dropout:
-#    min: 0.1
-#    max: 0.5
+  seq_model_name:
+    values: [ "LSTM", "RNN", "GRU" ]
+  model_args.dropout:
+    min: 0.2
+    max: 0.5
+  model_args.seq_args.dropout:
+    min: 0.2
+    max: 0.5
   learning_rate:
     values: [0.1, 0.01, 0.001, 0.0001, 0.00001]
   accumulation_steps:
@@ -22,10 +22,10 @@ parameters:
   num_layers:
     values: [1, 2, 3, 4, 5]
   batch_size:
-    values: [256, 512, 1024]
+    values: [1, 4, 16]
   model_args.seq_args.bidirectional:
     values: [true, false]
   model_args.data_args.minimum_vocab_freq_threshold:
-    values: [0, 1, 2]
+    values: [0, 1]
 
 # https://docs.wandb.ai/guides/sweeps/configuration#parameters
