--- a/HW/HW_3/sweep.yaml
+++ b/HW/HW_3/sweep.yaml
@@ -21,11 +21,19 @@ parameters:
     values: [32, 64, 128, 256, 512]
   num_layers:
     values: [1, 2, 3, 4, 5]
-  batch_size:
-    values: [1, 4, 16]
+#  batch_size:
+#    values: [1, 4, 16]
   model_args.seq_args.bidirectional:
     values: [true, false]
   model_args.data_args.minimum_vocab_freq_threshold:
     values: [0, 1]
+  model_args.cat_max_and_mean:
+    values: [true, false]
+  model_args.weight_requires_grad:
+    values: [true, false]
+  model_args.embedding_model:
+    values: ["glove-twitter", "glove-wiki-gigaword"]
+  model_args.seq_args.input_size:
+    values: [ 50, 100, 200, 300 ]
 
 # https://docs.wandb.ai/guides/sweeps/configuration#parameters
