--- a/HW/HW_3/sweep.yaml
+++ b/HW/HW_3/sweep.yaml
@@ -1,40 +1,37 @@
 program: train.py
-project: IMDB_Tutorial
+project: IMDB_Tutorial_delete_me
 method: bayes
 metric:
   name: dev_accuracy
   goal: maximize
+
 parameters:
-#  seq_model_name:
-#    values: [ "LSTM", "RNN", "GRU" ]
-#  model_args.dropout:
-#    min: 0.2
-#    max: 0.5
-#  model_args.seq_args.dropout:
-#    min: 0.2
-#    max: 0.5
+
   learning_rate:
     values: [0.1, 0.01, 0.001, 0.0001, 0.00001]
   accumulation_steps:
     values: [1, 2, 4]
-#    values: [1, 2, 4, 8, 16]
-  hidden_size:
-    values: [128, 256, 512]
-  num_layers:
-    values: [1, 2, 3, 4, 5]
-  batch_size:
-    values: [1, 4, 16]
-#  model_args.seq_args.bidirectional:
-#    values: [true, false]
-  model_args.data_args.minimum_vocab_freq_threshold:
-    values: [0, 1]
-  model_args.cat_max_and_mean:
-    values: [true, false]
+
+  data_args.batch_size:
+    values: [1, 4, 8]
+  data_args.minimum_vocab_freq_threshold:
+      values: [0, 1]
+
+  model_args.dropout:
+    values: [0.2, 0.3, 0.4]
   model_args.weight_requires_grad:
-    values: [true, false]
+    values: [false, true]
+  model_args.cat_max_and_mean:
+    values: [ false, true ]
   model_args.embedding_model:
-    values: ["glove-twitter", "glove-wiki-gigaword"]
+    values: [ "glove-wiki-gigaword" ]
+  model_args.seq_args.hidden_size:
+    values: [ 256, 512 ]
+  model_args.seq_args.bidirectional:
+    values: [ false, true ]
   model_args.seq_args.input_size:
-    values: [ 50, 100, 200, 300 ]
+    values: [50, 100, 200, 300]
+  model_args.seq_args.num_layers:
+    values: [2, 3]
 
 # https://docs.wandb.ai/guides/sweeps/configuration#parameters
