--- a/HW/HW_3/sweep.yaml
+++ b/HW/HW_3/sweep.yaml
@@ -1,5 +1,5 @@
 program: train.py
-project: IMDB_Multiclass_sweep
+project: IMDB_Multiclass_final_sweep
 method: bayes
 metric:
   name: dev_accuracy
@@ -24,14 +24,12 @@ parameters:
   model_args.cat_max_and_mean:
     values: [ false, true ]
   model_args.embedding_model:
-    values: [ "glove-wiki-gigaword" ]
+    values: [ "glove-wiki-gigaword", "glove-twitter", "none" ]
   model_args.seq_args.hidden_size:
     values: [ 256, 512 ]
   model_args.seq_args.bidirectional:
     values: [ false, true ]
   model_args.seq_args.input_size:
     values: [50, 100, 200, 300]
-  model_args.seq_args.num_layers:
-    values: [2, 3]
 
 # https://docs.wandb.ai/guides/sweeps/configuration#parameters
