--- a/HW/HW_3/sweep.yaml
+++ b/HW/HW_3/sweep.yaml
@@ -1,35 +1,46 @@
 program: train.py
-project: IMDB_Multiclass_final_sweep
+project: IMDB_Tutorial
 method: bayes
+
+# added configuration
+early_terminate:
+  type: hyperband
+  min_iter: 3
+# +++++++++++++++++++
+
 metric:
   name: dev_accuracy
   goal: maximize
-
 parameters:
-
   learning_rate:
-    values: [0.1, 0.01, 0.001, 0.0001, 0.00001]
+    values: [0.1, 0.01, 0.0001, 0.00001]
   accumulation_steps:
-    values: [1, 2, 4]
+    values: [1, 2, 4, 8, 16]
+  hidden_size:
+    values: [32, 64, 128, 256, 512]
+  num_layers:
+    values: [1, 2, 3, 4, 5]
 
-  data_args.batch_size:
-    values: [1, 4, 8]
-  data_args.minimum_vocab_freq_threshold:
-      values: [0, 1]
-
-  model_args.dropout:
+# Tuning
+  dropout:
     values: [0.2, 0.3, 0.4]
-  model_args.weight_requires_grad:
+  backbone_model:
+    values: ["RNN", "LSTM", "GRU"]
+  bidirectional:
+    values: [false, true ]
+  minimum_vocab_freq_threshold:
+    values: [0, 1]
+  input_size:
+    values: [ 100, 200 ]
+  embedding:
+    values: ["none", "glove-wiki-gigaword", "glove-twitter"]
+  embedding_weight_requires_grad:
     values: [false, true]
-  model_args.cat_max_and_mean:
-    values: [ false, true ]
-  model_args.embedding_model:
-    values: [ "glove-wiki-gigaword", "glove-twitter", "none" ]
-  model_args.seq_args.hidden_size:
-    values: [ 256, 512 ]
-  model_args.seq_args.bidirectional:
-    values: [ false, true ]
-  model_args.seq_args.input_size:
-    values: [50, 100, 200, 300]
 
-# https://docs.wandb.ai/guides/sweeps/configuration#parameters
+
+# extra params
+  batch_size:
+    values: [ 64 ]
+  cat_max_and_mean:
+    values: [false, true]
+
