--- a/HW/HW_3/config.yaml
+++ b/HW/HW_3/config.yaml
@@ -1,6 +1,6 @@
 name: run # Experiment prefix name to save in the logger
 seed: 42  # Random seed for reproducibility
-num_epochs: 50   # Number of epochs to train the model
+num_epochs: 15   # Number of epochs to train the model
 do_train: true
 do_eval_on_train: true  # Run evaluation on train set in the end of every epoch
 do_eval: true  # Evaluate on dev set at the end of every epoch
@@ -12,10 +12,10 @@ accumulation_steps: 1
 
 data_args:
   max_seq_length: 64
-  batch_size: 128
-  shuffle: True
-  eval_batch_size: 4  # Batch size for evaluation
-  minimum_vocab_freq_threshold: 1
+  batch_size: 8
+  shuffle: False
+  eval_batch_size: 1  # Batch size for evaluation
+  minimum_vocab_freq_threshold: 0
 
 model_args:
   output_size: 5  # Should correspond to the number of classes
@@ -23,7 +23,7 @@ model_args:
   embedding_weight_requires_grad: False
   cat_max_and_mean: False
   backbone_model: LSTM
-  embedding: glove-wiki-gigaword # https://github.com/RaRe-Technologies/gensim-data
+  embedding: none # https://github.com/RaRe-Technologies/gensim-data
   seq_args:
     hidden_size: 256  # Size of the hidden state of the LSTM
     bidirectional: True
