--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-gensim==4.2.0
-numpy==1.23.1
-pandas==1.4.3
-PyYAML==6.0
-torch==1.12.0
-tqdm==4.64.0
-wandb==0.12.21
+gensim
+numpy
+pandas
+PyYAML
+torch
+tqdm
+wandb
+matplotlib
+sklearn
+transformers
+seaborn
+python-box
