change according to https://colab.research.google.com/drive/128wX6r_Nz-2LZ_lROeWjWS_yTi96KR7J?usp=sharing#scrollTo=vzeVFoz1wDYf

--- a/final_project/sweep.yaml
+++ b/final_project/sweep.yaml
@@ -55,10 +55,10 @@ command:
   - "false"
   - "--dataset_tag_field"
   - "name_tags"
-  - "--max_train_samples"
-  - "128"
-  - "--max_eval_samples"
-  - "64"
+#  - "--max_train_samples"
+#  - "128"
+#  - "--max_eval_samples"
+#  - "64"
 #  - "--metrics"
 #  - "accuracy,f1"
 #  - "--do_train"
