change according to https://colab.research.google.com/drive/128wX6r_Nz-2LZ_lROeWjWS_yTi96KR7J?usp=sharing#scrollTo=vzeVFoz1wDYf

--- a/final_project/sweep.yaml
+++ b/final_project/sweep.yaml
@@ -52,7 +52,7 @@ command:
   - "--tokenizers_parallelism"
   - "false"
   - "--force_create"
-  - "false"
+  - "true"
   - "--dataset_tag_field"
   - "name_tags"
 #  - "--max_train_samples"
