--- a/final_project/sweep.yaml
+++ b/final_project/sweep.yaml
@@ -8,19 +8,20 @@ metric:
   name: eval/f1
 parameters:
   num_train_epochs:
-    values: [5, 10]
+    values: [1]
   learning_rate:
     values: [1e-5, 5e-5, 1e-4]
-  is_return_per_unk:
-    values: [true, false]
-  is_remove_all_only_unk:
-    values: [true, false]
   is_perform_word_cleaning:
     values: [true, false]
-#  per_device_train_batch_size:
-#    values: [2, 4, 8]
   model_name_or_path:
-    values: ["aubmindlab/bert-base-arabertv02", "CAMeL-Lab/bert-base-arabic-camelbert-mix-ner"]
+    # https://github.com/aub-mind/arabert
+    values: ["aubmindlab/bert-base-arabertv02",
+             "CAMeL-Lab/bert-base-arabic-camelbert-mix-ner",
+             "aubmindlab/bert-base-arabertv02-twitter",
+             "aubmindlab/bert-base-arabertv2"
+             "asafaya/bert-base-arabic"
+             "hatmimoha/arabic-ner"
+            ]
 early_terminate:
   type: hyperband
   min_iter: 90
@@ -41,9 +42,21 @@ command:
   - "--tokenizers_parallelism"
   - "false"
   - "--force_create"
-  - "true"
+  - "false"
   - "--dataset_tag_field"
   - "name_tags"
   - "--seed"
   - "42"
+  - "--fp16"
+  - "true"
+  - "--auto_find_batch_size"
+  - "true"
+  - "--gradient_accumulation_steps"
+  - "2"
+  - "--lr_scheduler_type"
+  - "cosine"
+  - "--max_train_samples"
+  - "512"
+  - "--max_eval_samples"
+  - "128"
   - ${args}
